--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     
     <ul class="quick-access">
       <li>
-        <a href="https://codepen.io/khp62/full/oNyrMKp">Homepage</a>
+        <a href="https://acetorrent.github.io/WebsiteCV1/">Homepage</a>
       </li>
       <li>
-        <a href="https://codepen.io/khp62/full/YzvoOKL">Portfolio</a>
+        <a href="https://acetorrent.github.io/WebsiteCV2/">Portfolio</a>
       </li>
       <li>
         <a href="https://codepen.io/khp62/full/XWYLZjP">Contacts and Informations</a>
