--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Final Project_Home</title>
+  <title>My Personal Projects</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
@@ -20,13 +20,13 @@
         <a href="https://acetorrent.github.io/WebsiteCV2/">Portfolio</a>
       </li>
       <li>
-        <a href="https://codepen.io/khp62/full/XWYLZjP">Contacts and Informations</a>
+        <a href="https://acetorrent.github.io/WebsiteCV3/">Contacts and Informations</a>
       </li>
     </ul>
 </div>
 
 <div class="info">
-  <a href="https://codepen.io/khp62/full/YzvoOKL" class="info-box">
+  <a href="https://acetorrent.github.io/WebsiteCV2/" class="info-box">
     <!-- title   -->
     <span style= "text-align:center;">Explore Portfolio<br><br></span>
     <!-- detail   -->
